--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "version": "1.0.0",
   "description": "a Sails application",
   "dependencies": {
-    "sails": "0.12.13",
-    "grunt": "0.4.1",
-    "sails-disk": "~0.9.0",
     "ejs": "0.8.4",
+    "express": "4.15.2",
+    "forever": "~0.11.1",
+    "grunt": "0.4.1",
     "optimist": "0.6.1",
-    "forever": "~0.11.1"
+    "sails": "0.12.13",
+    "sails-disk": "~0.9.0"
   },
   "engines": {
     "node": ">= 6.10.3",
     "npm": ">= 4.5.0"
-    },
+  },
   "scripts": {
     "start": "forever start app.js",
     "debug": "node debug app.js"
@@ -27,5 +28,4 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {}
-
 }
