--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "version": "1.0.0",
   "description": "a Sails application",
   "dependencies": {
-    "ejs": "0.8.4",
-    "express": "4.15.2",
-    "forever": "~0.11.1",
-    "grunt": "0.4.1",
-    "optimist": "0.6.1",
-    "sails": "0.12.13",
-    "sails-disk": "~0.9.0"
+    "ejs": "^0.8.4",
+    "express": "^4.15.2",
+    "foobar": "^1.1.0",
+    "forever": "^0.11.1",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^1.2.0",
+    "optimist": "^0.6.1",
+    "sails": "^0.12.13",
+    "sails-disk": "^0.9.3"
   },
   "engines": {
     "node": ">= 6.10.3",
